...
    clearEnabled: Boolean
) {
  if (showModalBottomSheet) {
    ModalBottomSheet(
        onDismissRequest = onDismissRequest,
        shape = RoundedCornerShape(topStart = 16.dp, topEnd = 16.dp),
        modifier = Modifier.testTag("availabilityBottomSheet")) {
          Column(
              modifier =
                  Modifier.fillMaxWidth()
                      .padding(horizontal = 16.dp, vertical = 8.dp)
                      .testTag("bottomSheetColumn"),
              horizontalAlignment = Alignment.CenterHorizontally) {
                val currentTime = Calendar.getInstance()
                // State for the TimePicker
                val timePickerState =
                    rememberTimePickerState(
                        initialHour = currentTime.get(Calendar.HOUR_OF_DAY),
...
}

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun QuickFixTimePicker(timePickerState: TimePickerState) {
  Column(
      modifier = Modifier.fillMaxWidth().padding(16.dp).testTag("timePickerColumn"),
      horizontalAlignment = Alignment.CenterHorizontally) {
        // Title
        Text("Enter time", style = MaterialTheme.typography.bodyMedium)

        Spacer(modifier = Modifier.height(16.dp))

        // TimeInput for selecting time
        TimeInput(
            state = timePickerState,
            modifier = Modifier.testTag("timeInput"),
            colors =
                TimePickerDefaults.colors(
                    timeSelectorSelectedContainerColor = colorScheme.primary.copy(alpha = 0.3f),
                    timeSelectorSelectedContentColor = colorScheme.onBackground,
                    clockDialColor = colorScheme.primary.copy(alpha = 0.1f),
                    timeSelectorUnselectedContainerColor = TimeSelectorUnselectedContainerColor,
...
