...

  AlertDialog(
      onDismissRequest = { onDismissRequest() },
      confirmButton = {
        TextButton(onClick = { onTimeSelected(timePickerState.hour, timePickerState.minute) }) {
          Text(
              "OK",
              fontSize = 16.sp,
          )
        }
      },
      dismissButton = {
        TextButton(onClick = { onDismissRequest() }) {
...
